tests/fixtures/pass/syntax-error/input/main.ts
import {q} from "typestage";

// Intentional diagnostic: the quoted TypeScript is syntactically incomplete.
export const expr = q.expr`
  x +
`;
